fix: spacing between event

--- a/styles/pages/events/eventsPage.css
+++ b/styles/pages/events/eventsPage.css
@@ -22,6 +22,8 @@ span {
 
     grid-row-start: 2;
     grid-row-end: 4;
+
+    row-gap: 2rem;
 }
 
 .culto-do-amigo-event {
@@ -63,6 +65,8 @@ span {
 
         grid-column-start: 3;
         grid-column-end: 5;
+
+        row-gap: 0;
     }
 
     .culto-do-amigo-event {
